Formalize facet specs